chore: rename to jsxcss

--- a/websites/docs/i18n/ko/docusaurus-plugin-content-docs/current.json
+++ b/websites/docs/i18n/ko/docusaurus-plugin-content-docs/current.json
@@ -3,21 +3,21 @@
     "message": "Next",
     "description": "The label for version current"
   },
-  "sidebar.tutorialSidebar.category.@fullcss/core": {
-    "message": "@fullcss/core",
-    "description": "The label for category @fullcss/core in sidebar tutorialSidebar"
+  "sidebar.tutorialSidebar.category.@jsxcss/core": {
+    "message": "@jsxcss/core",
+    "description": "The label for category @jsxcss/core in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.@fullcss/emotion": {
-    "message": "@fullcss/emotion",
-    "description": "The label for category @fullcss/emotion in sidebar tutorialSidebar"
+  "sidebar.tutorialSidebar.category.@jsxcss/emotion": {
+    "message": "@jsxcss/emotion",
+    "description": "The label for category @jsxcss/emotion in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Introduction": {
     "message": "Introduction",
     "description": "The label for category Introduction in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.@fullcss/styled-components": {
-    "message": "@fullcss/styled-components",
-    "description": "The label for category @fullcss/styled-components in sidebar tutorialSidebar"
+  "sidebar.tutorialSidebar.category.@jsxcss/styled-components": {
+    "message": "@jsxcss/styled-components",
+    "description": "The label for category @jsxcss/styled-components in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.core": {
     "message": "core",
