refactor: export all

--- a/websites/docs/i18n/ko/code.json
+++ b/websites/docs/i18n/ko/code.json
@@ -285,5 +285,8 @@
   "theme.tags.tagsPageTitle": {
     "message": "태그",
     "description": "The title of the tag list page"
+  },
+  "CSS components in JSX easily": {
+    "message": "CSS components in JSX easily"
   }
 }
