--- a/websites/docs/i18n/ko/docusaurus-theme-classic/footer.json
+++ b/websites/docs/i18n/ko/docusaurus-theme-classic/footer.json
@@ -1,27 +1,19 @@
 {
   "link.title.Docs": {
-    "message": "Docs",
+    "message": "문서",
     "description": "The title of the footer links column with title=Docs in the footer"
   },
   "link.title.More": {
-    "message": "More",
+    "message": "더보기",
     "description": "The title of the footer links column with title=More in the footer"
   },
   "link.title.Libraries": {
-    "message": "Libraries",
+    "message": "라이브러리",
     "description": "The title of the footer links column with title=Libraries in the footer"
   },
   "link.item.label.Getting Started": {
-    "message": "Getting Started",
+    "message": "시작하기",
     "description": "The label of footer link with label=Getting Started linking to /docs/intro/motivation.i18n"
-  },
-  "link.item.label.Installation": {
-    "message": "Installation",
-    "description": "The label of footer link with label=Installation linking to /docs/intro/installation.i18n"
-  },
-  "link.item.label.Visualization": {
-    "message": "Visualization",
-    "description": "The label of footer link with label=Visualization linking to https://visualization.jsxcss.org/react"
   },
   "link.item.label.GitHub": {
     "message": "GitHub",
@@ -36,11 +28,7 @@
     "description": "The footer copyright"
   },
   "link.item.label.Example of @jsxcss/emotion": {
-    "message": "Example of @jsxcss/emotion",
+    "message": "@jsxcss/emotion 예시 자료",
     "description": "The label of footer link with label=Example of @jsxcss/emotion linking to https://emotion.jsxcss.org"
-  },
-  "link.item.label.@jsxcss/core": {
-    "message": "@jsxcss/core",
-    "description": "The label of footer link with label=@jsxcss/core linking to https://www.npmjs.com/package/@jsxcss/core"
   }
 }
