--- a/websites/docs/i18n/ko/docusaurus-theme-classic/navbar.json
+++ b/websites/docs/i18n/ko/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "jsxcss",
+    "message": "JSXCSS",
     "description": "The title in the navbar"
   },
   "item.label.Docs": {
