--- a/packages/emotion/src/responsive/MediaQueryProvider.en.mdx
+++ b/packages/emotion/src/responsive/MediaQueryProvider.en.mdx
@@ -2,3 +2,51 @@
 sidebar_position: 1
 title: MediaQueryProvider
 ---
+
+### Simple setup is required to implement responsive UI easily
+
+MediaQueryProvider should be in parent component to use [Responsive css prop](/docs/emotion/src/layout-components/Box.i18n#1-css-prop), [useMediaQuery](/docs/emotion/src/responsive/useMediaQuery.i18n). Now you can create responsive UI very easily.
+
+```tsx
+const App = () => {
+  const mediaQuery = useMediaQuery()
+
+  return (
+    <>
+      <div
+        css={mediaQuery({
+          width: [12, 24, 36], // This will throw Error because of no MediaQueryProvider in parent
+        })}
+      />
+      <Box
+        width={12} // Valid, if you don't use array to use responsive css prop
+      />
+      <Box
+        width={[12, 24, 36]} // This will throw Error because of no MediaQueryProvider in parent
+      />
+
+      <MediaQueryProvider>
+        <Box
+          width={[12, 24, 36]} // Valid
+        />
+        <Box
+          width={12} // Valid
+        />
+        <UseMediaQuery />
+      </MediaQueryProvider>
+    </>
+  )
+}
+
+const UseMediaQuery = () => {
+  const mediaQuery = useMediaQuery()
+
+  return (
+    <div
+      css={mediaQuery({
+        width: [12, 24, 36], // Valid
+      })}
+    />
+  )
+}
+```
