--- a/packages/emotion/src/polymorphic/react-spring.en.mdx
+++ b/packages/emotion/src/polymorphic/react-spring.en.mdx
@@ -2,3 +2,29 @@
 sidebar_position: 3
 title: react-spring
 ---
+
+# Integrating with react-spring
+
+### how to integrate
+
+First, install the library from the [react-spring homepage](https://www.react-spring.dev).
+
+```tsx
+import { Box } from '@jsxcss/emotion'
+import { animated, useSpring } from '@react-spring/web'
+
+const ReactSpringPage = () => {
+  const style = useSpring({
+    from: { opacity: 0 },
+    to: { opacity: 1 },
+  })
+
+  return (
+    <Box as={animated.div} style={style} backgroundColor={['red', 'yellow']} margin={12}>
+      ReactSpringPage
+    </Box>
+  )
+}
+
+export default ReactSpringPage
+```
