--- a/packages/emotion/src/polymorphic/framer-motion.ko.mdx
+++ b/packages/emotion/src/polymorphic/framer-motion.ko.mdx
@@ -2,3 +2,30 @@
 sidebar_position: 2
 title: framer-motion
 ---
+
+# framer-motion과 통합하기
+
+### 통합하는 방법
+
+먼저 [framer-motion 홈페이지](https://www.framer.com/motion)에서 해당 라이브러리를 설치해주세요.
+
+```tsx
+import { Box } from '@jsxcss/emotion'
+import { motion } from 'framer-motion'
+
+const FramerMotionPage = () => {
+  return (
+    <Box
+      as={motion.div}
+      initial={{ opacity: 0 }}
+      animate={{ opacity: 1 }}
+      backgroundColor={['red', 'yellow']}
+      margin={12}
+    >
+      FramerMotionPage
+    </Box>
+  )
+}
+
+export default FramerMotionPage
+```
